[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "replayx"
dynamic = ["version"]
description = "Record and replay HTTP and HTTPS interactions for httpx. An async-native VCR for fast, deterministic tests."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Michael Kusi-Appiah", email = "appiah.michael@yahoo.com" }]
keywords = [
    "httpx",
    "testing",
    "vcr",
    "mock",
    "http",
    "record",
    "replay",
    "pytest",
    "async",
    "asyncio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.23"]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "PyYAML>=6.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://mkusiappiah.github.io/replayx/"
Documentation = "https://mkusiappiah.github.io/replayx/documentation.html"
Repository = "https://github.com/mkusiappiah/replayx"
Issues = "https://github.com/mkusiappiah/replayx/issues"
Changelog = "https://github.com/mkusiappiah/replayx/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
replayx = "replayx.pytest_plugin"

[tool.hatch.version]
path = "src/replayx/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/replayx"]

[tool.hatch.build.targets.sdist]
include = ["src/replayx", "tests", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src/replayx"]

[[tool.mypy.overrides]]
module = ["brotli", "brotlicffi", "zstandard"]
ignore_missing_imports = true
